--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,14 @@
+.form-field {
+    margin-bottom: 10px;
+}
+
 .error {
     color: white;
     background: red;
     display: none;
 }
 
-.centralize{
+.centralize {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,12 +17,14 @@
 .loading {
     background: rgba(0, 0, 0, 0.5);
     position: fixed;
-width: 100%;
-height: 100%;
+    width: 100%;
+    height: 100%;
 }
-.loading label{
+
+.loading label {
     font-size: 24px;
 }
+
 .clear {
     background-color: transparent;
     border: none;
@@ -42,8 +48,4 @@ height: 100%;
     border: 1px solid white;
 }
 
-.input {
-    padding: 10px;
-    width: -webkit-fill-available;
-    border: none;
-}
+
