--- a/css/register.css
+++ b/css/register.css
@@ -23,8 +23,15 @@ button:disabled {
     opacity: 0.7;
 }
 
+input {
+    border: none;
+}
+
+button {
+    margin-bottom: 10px;
+}
+
 .input {
-    padding: 10px;
     width: -webkit-fill-available;
     border: none;
 }
@@ -32,6 +39,6 @@ button:disabled {
 
 input,
 button {
-    padding: 10x;
+    padding: 10px;
     width: -webkit-fill-available;
 }
