--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,9 @@
+.body {
+    background: white; /*rgb(45, 211, 111)*/
+    height: 80vh;
+    margin: 0;
+}
+
 .form-field {
     margin-bottom: 10px;
 }
@@ -26,7 +32,7 @@
 }
 
 .clear {
-    background-color: transparent;
+    color: #22284c;
     border: none;
 }
 
@@ -36,16 +42,21 @@
 }
 
 .solid {
-    background: white;
+    background: #faca54;
     border: none;
-    color: rgb(45, 211, 111);
+    color: #22284c;
 }
 
 .outline {
     background: transparent;
-    ;
-    color: white;
+    color: #22284c;
     border: 1px solid white;
 }
 
+button:active {
+    opacity: 0.3;
+}
 
+button:disabled {
+    opacity: 0.7;
+}
