--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
-.body {
-    background: rgb(45, 211, 111);
-    height: 100vh;
-    margin: 0;
+.topPagina {
+    display: flex;
+    height: 40hv;
+    background: #ffffff;
+    justify-content: start;
+    align-items: start;
+    position: relative;
+    width: 95%;
+    background: #faca54;
+    padding: 10px;
 }
 
 button {
@@ -11,22 +17,19 @@ button {
     width: -webkit-fill-available;
 }
 
-button:active {
-    opacity: 0.3;
-}
+
 
 form {
     width: 300px;
 }
 
-button:disabled {
-    opacity: 0.7;
-}
+
 
 .input {
     padding: 10px;
     width: -webkit-fill-available;
     border: none;
+    background: #DCDCDC;
 }
 
 
