--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
     display: flex;
     height: 40hv;
     background: #ffffff;
-    justify-content: start;
+    justify-content: center;
     align-items: start;
     position: relative;
-    width: 95%;
+    width: 98,5%;
     background: #faca54;
     padding: 10px;
 }
