--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,114 @@
-body {
-    height: 100vh;
+.clearHome {
+    color: white;
+    border: none;
+    background: transparent;
 }
-header{
+
+.btnpositionHome {
+    float: right;
+    width: 50px;
+    margin-right: 0%;
+    height: 50px;
     text-align: right;
+    margin-top: 1px;
 }
-header button {
-    width: auto;
+
+.iconePosition {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fece56;
+}
+
+.textoHome {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2%;
+    color: white;
+    text-align: center;
+}
+
+.icone {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fece56;
+}
+
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    background: #22284c;
+}
+
+
+.accordion-menu {
+    width: 100%;
+    max-width: 95%;
+    margin: 60px auto 20px;
+    background: #fff;
+    border-radius: 4px;
+    position: relative;
+    list-style: none;
+}
+
+.dropdownlink {
+    cursor: pointer;
+    padding: 12px 12px;
+    font-size: 16px;
+    border-bottom: 1px solid #ccc;
+    color: #212121;
+    transition: all 0.4s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &:hover {
+        background-color: #faca54;
+        color: #22284c;
+    }
+}
+
+.submenuItems a {
+    display: block;
+    color: #727272;
+    padding: 12px 12px 12px 45px;
+    transition: all 0.4s ease-out;
+
+    &:hover {
+        background-color: #CDDC39;
+        color: #fff;
+    }
+}
+
+.Menuhome {
+    display: flex;
+    position: relative;
+    height: 100%;
+}
+
+.Menuhome .sidebar {
+    position: relative;
+    width: 200px;
+    height: 100%;
+    background: #4b4276;
+    padding: 30 px 0;
+}
+
+.Menuhome .sidebar ul li {
+    padding: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    border-top: 1px solid rgba(225, 225, 225, 0.5);
+
+}
+
+.Menuhome .sidebar ul li a {
+    color: #bdb8b7;
+    display: block;
 }
