--- a/css/bootSt1gol1tempo.css
+++ b/css/bootSt1gol1tempo.css
@@ -900,7 +900,7 @@ pre code {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-right: -15px;
-    margin-left: -15px
+    margin-left: -15px;
 }
 
 @media (min-width:576px) {
@@ -5538,15 +5538,16 @@ tbody.collapse.show {
 }
 
 .badge {
-    display: inline-block;
-    padding: .25em .4em;
+    display: inline-table;
+    float: left;
+    position: relative;
     font-size: 75%;
     font-weight: 700;
     line-height: 1;
     color: #fff;
-    text-align: center;
+    text-align: left;
     white-space: nowrap;
-    vertical-align: baseline;
+    vertical-align: auto;
     border-radius: .25rem
 }
 
