--- a/css/home.css
+++ b/css/home.css
@@ -37,34 +37,6 @@ body {
 }
 
 
-.accordion-menu {
-    width: 100%;
-    max-width: 95%;
-    margin: 60px auto 20px;
-    background: #fff;
-    border-radius: 4px;
-    position: relative;
-    list-style: none;
-}
-
-.dropdownlink {
-    cursor: pointer;
-    padding: 12px 12px;
-    font-size: 16px;
-    border-bottom: 1px solid #ccc;
-    color: #212121;
-    transition: all 0.4s ease-out;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    &:hover {
-        background-color: #faca54;
-        color: #22284c;
-        font-weight: bold;
-    }
-}
-
 .submenuItems a {
     display: block;
     color: #727272;
@@ -76,7 +48,10 @@ body {
         color: #fff;
     }
 }
-
+.chevron-right {
+    float: right;
+    margin-right: 15px
+}
 .Menuhome {
     display: flex;
     position: relative;
