--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-
-
-
-
 button {
     padding: 10px;
     margin-bottom: 10px;
@@ -9,7 +5,44 @@ button {
     width: -webkit-fill-available;
 }
 
+.accordion-menu {
+    width: 100%;
+    max-width: 95%;
+    margin: 60px auto 20px;
+    background: #fff;
+    border-radius: 4px;
+    position: relative;
+    list-style:none;
+}
 
+.accordion-pages {
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
+    background: #fff;
+    border-radius: 4px;
+    position: relative;
+    list-style: none;
+}
+
+.dropdownlink {
+    cursor: pointer;
+    padding: 20px 30px;
+    font-size: 16px;
+    border-bottom: 1px solid #ccc;
+    color: #212121;
+    transition: all 0.4s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
+    &:hover {
+        background-color: #faca54;
+        color: #22284c;
+        font-weight: bold;
+    }
+}
 
 form {
     width: 300px;
